# dataframe_sql

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  panda_sql_test.py  parsers.py  performance_tests.py  requirements.txt  setup.cfg  setup.py  sql.grammar  sql_exception.py  sql_objects.py  sql_to_pandas.py  versioneer.py
.github/: stale.yml
.github/workflows/: azure-pipelines.yml  codeql-analysis.yml  publish_package.yml
ci/: code_checks.sh  run_tests.sh  setup_env.sh  test-requirements.txt
dataframe_sql/: __init__.py  _version.py  dataframe_sql.py  parsers.py  sql_objects.py  sql_select_query.py  sql_select_query.pyx
dataframe_sql/data/: avocado.csv
dataframe_sql/exceptions/: sql_exception.py
dataframe_sql/grammar/: sql.grammar
dataframe_sql/parsing/: sql_parser.py
dataframe_sql/parsing/lark/: utils.pyx  visitors.pyx
dataframe_sql/tests/: markers.py  panda_sql_functionality_test.py  panda_sql_test.py  pandas_sql_functionality_test.py  performance_tests.py  sql_execution_plan_test.py  utils.py
scripts/: build_and_run_performance.sh
