# To be kept consistent with "Import Formatting" section in contributing.rst

[flake8]
max-line-length = 88
ignore =
    E203,  # space before : (needed for how black formats slicing)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    E402,  # module level import not at top of file
    E731,  # do not assign a lambda expression, use a def
    C406,  # Unnecessary list literal - rewrite as a dict literal.
    C408,  # Unnecessary dict call - rewrite as a literal.
    C409,  # Unnecessary list passed to tuple() - rewrite as a tuple literal.
    S001   # found modulo formatter (incorrect picks up mod operations)
exclude = versioneer.py, dataframe_sql/_version.py

[isort]
known_first_party = dataframe_sql
known_third_party = pandas, lark, numpy
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
force_sort_within_sections = True

[mypy]
ignore_missing_imports=True
no_implicit_optional=True
check_untyped_defs=True

[mypy-dataframe_sql.tests.*]
ignore_errors=True

[mypy-dataframe_sql._version]
ignore_errors=True

[mypy-versioneer]
ignore_errors=True

[tool:pytest]
testpaths = dataframe_sql/tests

[versioneer]
VCS = git
style = pep440
versionfile_source = dataframe_sql/_version.py
versionfile_build = dataframe_sql/_version.py
tag_prefix = v
parentdir_prefix = dataframe_sql-

[metadata]
description-file = README.md
